# mm_manifatture_web

./: .gitignore  README.md
bot/: .env.example  bot.sqlite-shm  bulk_publish.py  fix_photos_cloudinary_url.py  migrate_images.py  pyproject.toml  requirements.txt  start_bot.bat
bot/data/: caption_examples.json  reminders.json
bot/src/: catalog.py  cloudinary_uploader.py  config.py  db.py  logging_setup.py  main.py  messages.py  meta_token.py  scheduler.py
bot/src/ai/: __init__.py  caption.py  caption_examples.json
bot/src/handlers/: commands.py  conversation.py  safety.py
bot/src/publisher/: __init__.py  meta.py  mock.py  site.py
bot/src/reminders/: send.py
docs/: runbook.md
docs/launchd/: com.mmbot.reminders.plist
web/: .env.local.example  catalog.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/chi-siamo/: page.tsx
web/app/components/: AnalyticsProvider.tsx  CareAccordion.tsx  CategoryFilter.tsx  CookieBanner.tsx  CookiePreferencesButton.tsx  Footer.tsx  GALoader.tsx  Header.tsx  MapsEmbed.tsx  PhotoGallery.tsx  ProductCard.tsx  WhatsAppButton.tsx
web/app/contatti/: page.tsx
web/app/note-legali/: page.tsx
web/app/prodotti/: ProdottiClient.tsx  page.tsx
web/app/prodotti/[id]/: page.tsx
web/content/: about.json  contact.json  legal.json
web/lib/: catalog.ts
