[project]
name = "mm-manifatture-bot"
version = "0.1.0"
description = "Telegram bot per gestione sito e social negozio artigianato"
authors = [
    {name = "Luigi Maiese"}
]
requires-python = "^3.11"
dependencies = [
    "python-telegram-bot[job-queue] (>=21.0,<22.0)",
    "anthropic (>=0.25.0)",
    "cloudinary (>=1.40.0)",
    "pygithub (>=2.3.0)",
    "python-dotenv (>=1.0.0)",
    "aiohttp (>=3.9.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
